# ecs-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: api-reference.md  architecture.md  components.md  core-concepts.md  examples.md  getting-started.md  index.md  providers.md  systems.md
examples/: chat_agent.py  claude_agent.py  context_management_agent.py  litellm_agent.py  mcp_agent.py  multi_agent.py  permission_agent.py  plan_and_execute_agent.py  rag_agent.py  react_agent.py  retry_agent.py  serialization_demo.py  skill_agent.py  skill_discovery_agent.py  streaming_agent.py  streaming_system_agent.py  structured_output_agent.py  subagent_delegation.py  tool_agent.py  tool_approval_agent.py  tree_search_agent.py
tests/: test_approval_infinite_wait.py  test_builtin_tools.py  test_bwrap_sandbox.py  test_checkpoint.py  test_claude_provider.py  test_collaboration.py  test_compaction.py  test_component.py  test_components.py  test_components_new.py  test_context_components.py  test_discovery_manager.py  test_edit_tool.py  test_embedding_protocol.py  test_embedding_provider.py  test_entity.py  test_error_handling.py  test_event_bus.py  test_event_types.py  test_fake_provider.py  test_grep_ls_skills.py  test_integration_skills.py  test_litellm_provider.py  test_logging.py  test_mcp_client.py  test_mcp_skill_adapter.py  test_memory.py  test_openai_provider.py  test_permission_system.py  test_planning.py  test_provider.py  test_query.py  test_rag.py  test_real_llm_integration.py  test_reasoning.py  test_replanning.py  test_resume.py  test_runner.py  (+22 more)
(+78 files in other folders)
