[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecs-agent"
version = "0.1.0"
description = "ECS-based LLM Agent framework"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.24.0",
    "tenacity>=8.2.0",
    "structlog>=23.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
]
embeddings = ["numpy>=1.24.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src/ecs_agent"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
